# BadColumnEngine

./: .gitignore  README.md  meson.build
script/: build.sh  convert.sh  env.sh.example  hits_schema.csv  run_query.sh  setup.sh
src/: main.cpp
src/compression/: codec.cpp  codec.hpp  compression.cpp  compression.hpp
src/core/: column.cpp  column.hpp  schema.cpp  schema.hpp  types.hpp
src/io/: columnar_file.cpp  columnar_file.hpp  columnar_store.cpp  columnar_store.hpp  csv.cpp  csv.hpp
src/query/: aggregation.cpp  aggregation.hpp  batch.hpp  expr.cpp  expr.hpp  expression.hpp  logical.hpp  operators.cpp  operators.hpp  queries.cpp  queries.hpp  row_format.hpp
src/storage/: metadata.hpp  row_group.cpp  row_group.hpp
tests/: aggregation_test.cpp  column_test.cpp  compression_test.cpp  csv_test.cpp  escape_data.csv  escape_schema.csv  join_smoke.cpp  optional_smoke.cpp  roundtrip_test.cpp  schema_test.cpp  value_test.cpp
